--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
 <header>
     <div class="nav-container">
-        <a href="#" class="logo">MFS<span>~</span>Calc</a>
+        <a href="#" class="logo">MFS<span>~</span>calc</a>
         <div class="menu-icon" onclick="toggleMenu()">
             <div></div>
             <div></div>
@@ -234,9 +234,8 @@
         </div>
         <div class="nav-links">
             <a href="home.html">Home</a>
+            <a href="home.html">About</a>
             <a href="home.html">Contact</a>
-            <a href="https://github.com/nh-404/MFS-Calculator/releases/download/v1.1.4/MFS.Calculatior_v1.1.4.apk">Download APP</a>
-        
         </div>
     </div>
 </header>
@@ -253,16 +252,16 @@
 
         <h4>Cashout charge [USSD code]</h4>
         <div>
-            <button type="button" data-rate="0.0185" data-type="Bkash [*247#]" class="calcButton Bkash">Bkash [*247#]</button>
+            <button type="button" data-rate="0.01850" data-type="Bkash [*247#]" class="calcButton Bkash">Bkash [*247#]</button>
             <button type="button" data-rate="0.0150" data-type="Nagad [*167#]" class="calcButton Nagad">Nagad [*167#]</button>
-            <button type="button" data-rate="0.018" data-type="Rocket [*322#]" class="calcButton Rocket">Rocket [*322#]</button>
+            <button type="button" data-rate="0.0180" data-type="Rocket [*322#]" class="calcButton Rocket">Rocket [*322#]</button>
         </div>
 
         <h4>Cashout charge [APP]</h4>
         <div>
-            <button type="button" data-rate="0.0185" data-type="Bkash [APP]" class="calcButton Bkash">Bkash [App]</button>
+            <button type="button" data-rate="0.01850" data-type="Bkash [APP]" class="calcButton Bkash">Bkash [App]</button>
             <button type="button" data-rate="0.01250" data-type="Nagad [APP]" class="calcButton Nagad">Nagad [App]</button>
-            <button type="button" data-rate="0.018" data-type="Rocket [APP]" class="calcButton Rocket">Rocket [App]</button>
+            <button type="button" data-rate="0.0180" data-type="Rocket [APP]" class="calcButton Rocket">Rocket [App]</button>
         </div>
 
         <h4>Cashout charge [Other]</h4>
