--- a/home.html
+++ b/home.html
@@ -233,8 +233,8 @@
             <div></div>
         </div>
         <div class="nav-links">
-            <a href="home.html">Home</a>
-            <a href="home.html">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="index.html">Contact</a>
             <a href="https://github.com/nh-404/MFS-Calculator/releases/download/v1.1.4/MFS.Calculatior_v1.1.4.apk">Download APP</a>
         
         </div>
