--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <!-- Header -->
   <header id="header">
     <nav class="navbar navbar-expand-lg container">
-      <a class="navbar-brand text-white p-2" href="#">MFS~Calc</a>
+      <a class="navbar-brand text-white p-2" href="home.html">MFS~Calc</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -185,7 +185,7 @@
     <div class="container">
       <h1>MFS~Calc</h1>
       <p>The ultimate Mobile Financial Service (MFS) cash-out charge calculator for bKash, Nagad, and Rocket..</p>
-      <a href="index.html" class="btn btn-primary">Try Now</a>
+      <a href="home.html" class="btn btn-primary">Try Now</a>
     </div>
   </section>
 
