--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <div class="social-links">
       <a href="https://twitter.com/nh_404"><i class="fab fa-twitter"></i></a>
       <a href="https://t.me/nh_404"><i class="fab fa-telegram"></i></a>
-      <a href="https://www.linkedin.com/nh_404"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.linkedin.com/nh404"><i class="fab fa-linkedin"></i></a>
     </div>
   </footer>
 
